[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/basket-split-sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/inventory/item_slot.gd" type="Script" id=2]
[ext_resource path="res://scripts/interaction/pickup_item_container.gd" type="Script" id=3]
[ext_resource path="res://scenes/items/ItemBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/items/basket.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/items/item_object_rock.tres" type="Resource" id=6]
[ext_resource path="res://scripts/basket.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 32.0

[node name="Basket" type="KinematicBody2D" groups=["Container", "Interactable"]]
collision_layer = 12
collision_mask = 2
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
z_index = 2
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="SpriteFront" type="Sprite" parent="YSort"]
position = Vector2( 0, 5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -6.5 )
hframes = 2
frame = 1

[node name="SpriteBack" type="Sprite" parent="YSort"]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2

[node name="ItemSlot" type="Position2D" parent="YSort"]
position = Vector2( 0, -7.909 )
script = ExtResource( 2 )
_item_path = NodePath("ItemBase")

[node name="ItemBase" parent="YSort/ItemSlot" instance=ExtResource( 4 )]
item_data = ExtResource( 6 )

[node name="DropPosition" type="Position2D" parent="."]
position = Vector2( 0, 15.615 )

[node name="PickupItemContainer" type="Node" parent="."]
script = ExtResource( 3 )
_item_scene = ExtResource( 5 )
_item_slot = NodePath("../YSort/ItemSlot")
